bentopdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bentopdf
  namespace: norriswu0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bentopdf
  template:
    metadata:
      labels:
        app: bentopdf
    spec:
      containers:
        - name: bentopdf
          image: ghcr.io/alam00000/bentopdf-simple:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 128Mi
          livenessProbe:
            exec:
              command:
                - wget
                - --spider
                - -q
                - http://localhost:8080
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            exec:
              command:
                - wget
                - --spider
                - -q
                - http://localhost:8080
            initialDelaySeconds: 5
            periodSeconds: 10
