bentopdf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bentopdf
  namespace: norriswu0
spec:
  selector:
    app: bentopdf
  ports:
    - port: 8080
      targetPort: 8080
