bentopdf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bentopdf
  namespace: norriswu0
spec:
  ingressClassName: tailscale
  rules:
    - host: pdf.hoki-solt.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bentopdf
                port:
                  number: 8080
